Adicionado end point para trazer todas as linhas para associação com o dispositivo.
