# server/src/routes/lines.js
@@ -4,7 +4,7 @@ const validation = require('./validation/user')
 const lineController = require('../controller/lines')
 const validationFields = validation.handleField('number', 'description', 'routes', 'directions')
 
-router.get('/:id', jwt, lineController.getLineById)
+router.get('/associate', jwt, lineController.getLinesToAssociate)
 
 router.get('/', jwt, lineController.getLines)
 
@@ -13,5 +13,7 @@ router.put('/', jwt, validationFields, lineController.editLine)
 router.post('/', jwt, validationFields, lineController.createLine)
 
 router.delete('/:id', jwt, lineController.removeLine)
+
+router.get('/:id', jwt, lineController.getLineById)
 
 module.exports = router
